--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -20,10 +20,24 @@ $btn-border-radius: $button-radius;
 $btn-border-radius-sm: $button-radius;
 $btn-border-radius-lg: $button-radius;
 $button-padding-x: $button-padding-x;
-$button-padding-y: $button-padding-y;
 $button-padding-x-sm: $button-padding-x;
-$button-padding-y-sm: $button-padding-y;
 $button-padding-x-lg: $button-padding-x;
+$button-padding-y: $button-padding-y;
+$button-padding-y-sm: $button-padding-y;
 $button-padding-y-lg: $button-padding-y;
 $navbar-toggler-border-radius: 5px;
+
+//spacers
+$spacer: 1rem !default;
+$spacers: (
+  0: 0,
+  1: $spacer * 0.25,
+  2: $spacer * 0.5,
+  3: $spacer,
+  4: $spacer * 1.5,
+  5: $spacer * 3,
+  6: $spacer * 6,
+  7: $spacer * 8,
+  8: $spacer * 12,
+) !default;
 @import "../node_modules/bootstrap/scss/bootstrap";
