--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,7 +2,18 @@
   color: var(--bs-dark);
 }
 
-.header{
+.header {
   background: url(../images/header-background.jpg) center center no-repeat;
   background-size: cover;
+}
+
+@media (max-width: 1000px) {
+  .hero .image-container {
+    display: flex;
+    justify-content: center;
+  }
+
+  .hero .text-container {
+    text-align: center;
+  }
 }
