--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,6 +2,11 @@
   color: var(--bs-dark);
 }
 
+.navbar-sticky{
+    opacity: 0.9;
+    box-shadow: 0 0 10px rga(0,0,0,0.5);
+}
+
 .header {
   background: url(../images/header-background.jpg) center center no-repeat;
   background-size: cover;
