--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,7 +1,9 @@
 .navbar .btn-outline-light:hover {
   color: var(--bs-dark);
 }
-
+.navbar {
+  transition: all 0.5s ease-in-out;
+}
 .navbar-sticky{
     opacity: 0.9;
     box-shadow: 0 0 10px rga(0,0,0,0.5);
